Refactor: Complete application modernization and security improvements
Major Changes:
- Implemented MVC architecture with proper separation of concerns
- Added routing system for clean URLs
- Fixed critical SQL injection vulnerabilities
- Moved database credentials to environment variables
- Added CSRF protection for all forms
- Implemented secure session handling

Security Fixes:
- Fixed SQL injection in all database queries
- Removed hardcoded credentials from source code
- Added input validation and sanitization
- Implemented proper error handling and logging
- Added security headers in .htaccess
- Fixed mixed content issues (HTTP to HTTPS)

Architecture:
- Created src/ directory with PSR-4 autoloading
- Implemented BaseController with reusable methods
- Created proper Models (Injury, Diagnostic)
- Added Router class for URL handling
- Moved assets to public/ directory

Configuration:
- Added Composer for dependency management
- Created .env.example for environment configuration
- Added PostgreSQL support
- Updated .gitignore to exclude sensitive files

Documentation:
- Added comprehensive installation guide
- Created migration guide from old version
- Added developer guide and security documentation
- Created quick reference and troubleshooting guides

Files Added:
- bootstrap.php - Application bootstrap
- public/index.php - New entry point
- public/router.php - Router for built-in server
- src/Config/Database.php - Database configuration
- src/Controllers/* - MVC controllers
- src/Models/* - Database models
- Multiple documentation files

Assets:
- Moved images/, style/, js/ to public/ directory
- Updated all views to use helper functions
- Fixed asset paths for proper loading

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,34 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# PHP
+/vendor/
+composer.lock
+.env
+.env.local
+.env.*.local
+
+# Logs
+/logs/*.log
+/logs/*.txt
+!/logs/.gitkeep
+
+# Cache
+/cache/*
+!/cache/.gitkeep
+
+# IDE
+/nbproject/
+/.vs/
+/.idea/
+*.swp
+*.swo
+*~
+.vscode/
+
+# Backup files
+*.bak
+*.backup
+*~
+backups/
